--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body 
 {
-  font-family:"Poppins", sans-serif;
+  font-family:"Poppins", sans-serif;    
 }
 html
 {
@@ -17,18 +17,453 @@ p
 {
     color: rgb(85,85,85);
 }
-/*Transition*/
-a, .btn
-{
-    transition: all 300ms ease;
+
+ /* show desktop navigation */
+ #desktop-nav
+ {
+  display: block;
+  margin-left: 40rem;
+  margin-top: 3rem;
 }
 /*Desktop navigation*/
 nav, .nav-links
 {
     display: flex;
 }
-.nav-links
+nav
 {
     justify-content: space-around;
     align-items: center;
+    height:17vh;
 }
+.nav-links
+{
+    gap:2rem;
+    font-size:2rem;
+    list-style-type: none;
+}
+.nav-links a
+{
+    color:black;
+    text-decoration: none;
+    text-decoration-color: white;
+}
+a:hover
+{
+  color:grey;
+  text-decoration-color: grey;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+}
+.logo
+{
+    font-size: 2rem;
+    margin-left: 10rem;
+}
+.logo:hover
+{
+  cursor: default;
+}
+
+/* hide mobile navigation */
+#top-nav {
+  display: none;
+}
+
+
+/*buttons*/
+
+
+/*Sections*/
+
+    section
+    {
+       padding-top: 4vh;
+       height: 96vh;
+       margin: 0,10rem;
+       box-sizing: border-box;
+       min-height: fit-content;
+    }
+    .section-container
+    {
+        display: flex;
+    }
+    /*profile section*/
+    #profile
+    {
+        display: flex;
+        justify-content: center;
+        gap:15rem;
+        height: 80vh;
+    }
+    .section_pic_container
+    {
+        display: flex;
+        height: 400px;
+        width:350px;
+        padding-top: 0%;
+        margin-top: 0%;
+        
+    }
+    .section_pic_container img{
+        height: 400px;
+        width: 400px;
+        border: 1px solid black;
+        border-radius: 50%;
+    }
+   
+    .section_text_container
+    {
+        margin-top: 5rem;
+        text-align: center;
+    } 
+    .section_text_container p{
+        font-weight: 600;
+    }
+    .section_text_p1
+    {
+        text-align: center;
+    }
+    .section_text_p2
+    {
+        font-size: 1.75rem;
+        margin-bottom: 1rem;
+    }
+    .title
+    {
+        font-size: 3rem;
+        text-align: center;
+    }
+    #social-container
+    {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        margin-top: 1rem;
+    }
+     .icon
+     {
+         cursor: pointer;
+         height:3rem;
+        
+     }
+     /* .giticon{
+        height:1rem;
+     }
+     .linkdinicon{
+        height:3rem;
+     } */
+ 
+      /*buttons*/
+     /*buttons*/
+.button-container {
+  display: flex;
+  text-align: center;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.butON {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
+  border: 0.1rem solid rgb(19, 3, 3);
+}
+
+.butON {
+  background: none;
+  color: black;
+}
+
+.butON:hover {
+  cursor: pointer;
+  background: rgb(19, 3, 3);
+  color: white;
+}
+
+.butON {
+  background: white;
+  color: black;
+  border: 0.1rem solid rgb(19, 3, 3);
+}
+
+.butON:hover {
+  cursor: pointer;
+  background: rgb(53, 53, 53);
+  color: white;
+}
+
+     
+
+     /* About Page */
+     #about
+     {
+       position: relative;
+     }
+     .about-container
+     {
+        gap:5rem;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+        justify-content: center;
+     }
+     .about_detailes_container
+     {
+        flex-direction: column;
+        justify-content: center;
+     }
+     .about_detailes_container,
+     .about-container
+      {
+        /*display: flex;*/
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 30px;
+      }
+      .icon-arrow
+      {
+        position: absolute;
+        right: 5rem;
+        bottom: 3rem;
+        width :30px;
+        height: 30px;
+     }
+      
+      .detailes-containers
+      {
+        padding:1.5rem;
+        padding-left: 10%;
+        padding-top: 4%;
+        flex:1;
+        height: 90%;
+        background:white;
+        border-radius: 2rem;
+        border: rgb(53,53,53)0.1rem solid;
+        transition: 1s;
+      }
+      .detailes-containers:hover
+      {
+        
+      transform:scale3d( 1,1.2,1);
+     background-image:linear-gradient(to right,#93A5CF  , #E4EfE9);
+      }
+      .section-container
+      {
+        justify-content: center;
+       
+     }
+      
+      .exp
+      {
+         
+         padding-left: 5%;
+         width:2rem;
+         height:2rem;
+        
+      }
+      .edu
+      {
+      
+        width:3rem;
+        height:3rem;
+      }
+      .tech
+      {
+        height:2rem;
+        padding-bottom: 10px;
+      }
+      .section-text-p1{
+        
+        font-size: 20px;
+        text-align: center;
+      }
+
+      /*experience section*/
+      #experience
+      {
+        position: relative;
+      }
+      .experience-sub-title
+      {
+        color:rgb(85,85,85);
+        font-weight: 600;
+        font-size: 1.75rem;
+        margin-bottom: 1rem;
+      }
+      .experience-detailes-container
+      {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border: 1px solid black;
+        border-radius: 30px;
+        /* justify-content: center;     */
+        width:auto;
+       padding: 1.5rem;
+     }
+     
+     .exp-det-con-1
+     {
+        border:none;
+     }
+     .exp-det-con-2
+     {
+     margin-left:1.5rem;
+     }
+
+     .project-container
+     {
+        margin:1rem;
+        gap: 1.5rem;
+     }
+     .project-container
+     {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        
+     }
+      
+      .article-container
+      {
+        display: flex;
+        flex-wrap: wrap;
+        text-align: initial;
+        flex-direction: row;
+        gap:2.5rem;
+        justify-content: space-around;
+        margin-bottom: 2rem;
+        position: relative;
+        overflow: hidden; 
+      }
+      .article-container2
+      {
+        display: flex;
+        flex-wrap: wrap;
+        text-align: initial;
+        gap:2.5rem;
+        
+      }
+      .article-container3
+      {
+        display: flex;
+        flex-wrap: wrap;
+        text-align: initial;
+        gap:2.5rem;
+        
+      }
+      .experience-sub-title
+      {
+        text-align: center;
+      }
+      .article-section-1
+      {
+        
+         margin-right: 25rem;
+      }
+     .article-section-2
+     {
+        margin-top: -26.3rem;
+       
+     }
+     .article-section-3
+     {
+        margin-top: -26.3rem;
+        margin-left: 25rem;
+     }
+     
+    .icon-star 
+    {
+         margin-left: -24px; 
+    }
+    .ar-3{
+      top: 32rem;
+    }
+
+    /*project*/
+    .project-img
+    {
+    height: 20rem;
+    width: 20rem;
+    border: 2px solid black;
+    border-radius: 3rem;
+    object-fit: cover; /* Ensures the image scales proportionally */
+    transition: transform 0.5s ease; /* Smooth transition */
+}
+.project-img:hover
+{
+    transform: scale(1.2); /* Zoom in on hover */
+}
+
+#projects
+{
+  display: block;
+}
+#projects-mb
+{
+  display: none;
+}
+
+
+/*contact*/
+#contact
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height:70vh;
+}
+.contact-info-upper-container
+{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  border:rgb(53,53,53)0.1rem solid;
+  border-radius: 2rem;
+  margin: 2rem auto;
+}
+.contact-info-container
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:0.5rem;
+  margin:1rem;
+}
+.contact-info-container p
+{
+  font-size: larger;
+  margin-bottom: 0;
+}
+.contact-info-container a
+{
+    color: black;
+    text-decoration: none;
+}
+.contact-info-container a:hover
+{
+  color: blue;
+}
+.contact-icon
+{
+  cursor:default;
+}
+.contact1 
+{
+  height:2.5rem;
+}
+
+/*Footer section*/
+footer
+{
+  margin:0 1.5rem;
+  height: 26vh;
+}
+footer p
+{
+  text-align: center;
+}
+
+    
+      
