--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ a:hover
      {
         flex-direction: column;
         justify-content: center;
+        margin-left: 2rem;
      }
      .about_detailes_container,
      .about-container
@@ -226,7 +227,7 @@ a:hover
       {
         position: absolute;
         right: 5rem;
-        bottom: 3rem;
+        bottom: 1rem;
         width :30px;
         height: 30px;
      }
@@ -259,7 +260,7 @@ a:hover
       {
          
          padding-left: 5%;
-         width:2rem;
+         width:3rem;
          height:2rem;
         
       }
